2004-10-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-file-properties.glade: 

	Change "OK" button to "Close" since the dialog is instant-apply

2004-10-13  Douglas Burke  <dburke@cfa.harvard.edu>

	* plugin-random.glade:

	Changed GtkOptionMenu to GtkComboBox.

2004-09-27  David Malcolm  <david@davemalcolm.demon.co.uk>

	* docbook-common-properties.glade:

	Changed "OK" to "Close" since dialog is instant-apply

	* docbook-ulink-properties.glade: 

	ditto

	* docbook-orderedlist-properties.glade: 

	ditto

2004-08-19  David Malcolm  <dmalcolm@redhat.com>

	* cong-preferences.glade: 

	Removed reference to bugzilla 125455; added Plugins tab

2004-08-19  Geert Stappers  <stappers@stappers.nl>

	* cong-preferences.glade:

	Added reference to bugzilla 125455.

2004-08-19  Keith Sharp  <kms@passback.co.uk>

	* cong-preferences.glade:

	The OK button should be a CLOSE button.

2004-07-13  Jeff Martin  <jeff@custommonkey.org>

	* glade/custom-element.glade, Makefile.am: 

	Added arbitrary element creation page document popup menu

2004-06-21  David Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-arbitrary.c, Makefile.am: 

	Added arbitrary document creation page for File->New assistant

2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* docbook-common-properties.glade: Added language editing
	widget	

2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* string_selection_dialog.glade: Add Cancel button
	make label not translatable, since it is just a 
	placeholder.	

2004-05-16  Geert Stappers  <stappers@stappers.nl>

	* ChangeLog: new file.

	* cong-file-properties.glade: Disabled translation of
	  various strings that are not displayed. (bugzilla.g.o #139814)