@@ -1,3 +1,9 @@
+2005-06-06  David Malcolm  <dmalcolm@redhat.com>
+
+	* cong-file-properties.glade: 
+
+	Added document statistics area, based on patch by Thierry Moisan
+
 2004-10-23  David Malcolm  <david@davemalcolm.demon.co.uk>
 
 	* cong-file-properties.glade: 
